--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon index.js",
-    "server:dev": "nodemon index.js"
+    "server:dev": "nodemon index.js",
+    "server:prod": "node index.js"
   },
   "author": "",
   "license": "ISC",
