fix: Auth cookie fix in frontend, add pharmacist user type

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PORT=5000
-#MONGO_URI=mongodb://localhost:27017/fyp
-MONGO_URI=mongodb://smart_health_care_system_db:27017/fyp
+MONGO_URI=mongodb://localhost:27017/fyp
+# MONGO_URI=mongodb://smart_health_care_system_db:27017/fyp
 TOKEN_KEY=fypfyp
 JWT_AUTH_SECRET=qwerty
 JWT_PUBLIC_SECRET=qwerty
